*** empty log message ***

--- a/jollix/public_html/en/en_home.html
+++ b/jollix/public_html/en/en_home.html
@@ -53,29 +53,26 @@
 		<tr>
 			<td valign="top">
 				<font size="+1"><b>News & Announcements:<b></font><br><br>
-								<b><i>26.10.03</i></b> - <b>Jollix 0.2.1 [Bugfix Release] available.</b><br>
-				<a href="en_download.html">Download here.</a>
-				<br><br>
-				<b><i>22.10.03</i></b> - <b>Jollix 0.2 available.</b><br>
-				<a href="en_download.html">Download here.</a><br>
-				Version 0.2 is the second beta-release of jollix. The most important enhancements
-				are: supports ATI Radeon graphics cards, ISDN-cards, Fritz!Card DSL by AVM.
-				Many internet and multimedia applications are part of the software collection, e.g. kopete (ICQ-client), KVIRC, XQF (gameserver browser), Kaffeine (mediaplayer) and TVTime
-				(TV-application). A detailed overview is
-				<a href="http://www.jollix.de/common/packets.html">available here</a>.
-				Experienced GNU/linux users might try to install jollix on their hard disk.
-				But the installation instructions are in german only so far. This will change soon.
-				We plan to develop a graphical installation program for a later version.
-				Jollix is optimized for the i686 architecture; its core is the gaming-sources-2.4.20 kernel
-				from gentoo linux. NVIDIA (TNT- Geforce 5900 FX) and ATI Radeon graphics cards
-				(8500-9800) are supported with full OpenGL 3D acceleration. The size of the jollix ISO-image is 506MB.
-				<br><br>
+								<b>07.05.2004</b> - <b>Jollix 0.3 Betatest</b><br>
+				Today jollix 0.3 betatest starts!<br><br>
+				New features are::
+				<ul>
+				<li>Linux Kernel 2.6.5</li>
+				<li>Kudzu hardware detection</li>
+				<li>XOrg-X11 6.7.0</li> 
+                                <li>KDE 3.2.2</li> 
+                                <li>KVIRC 3.0 Final</li> 
+				<li>WLAN and bluetooth support</li>
+				</ul> 
 			</td>
-			<td bgcolor="#f2f2f2" width="200" valign="top" align="center">
+			     <td bgcolor="#f2f2f2" width="200" valign="top" align="center">
+			     <br><a href="en_screenshots.html"><img src="../img/sc3.jpg" border="0"></a><br>
 				<br><a href="en_screenshots.html"><img src="../img/sc2.jpg" border="0"></a><br><br>
 				<b>Kontakt:</b><br>
 				Oliver Schwinn<br>patteh[AT]berlios[DOT]de<br>or <a href="http://developer.berlios.de/sendmessage.php?touser=3719">leave a message</a><br><br>
-				Jochen Spang<br>knochen[AT]berlios[DOT]de<br>or <a href="http://developer.berlios.de/sendmessage.php?touser=3712">leave a message</a><br><br><a href="irc://irc.quakenet.org/jollix" target="_blank">irc://irc.quakenet.org/jollix</a>
+				Jochen Spang<br>knochen[AT]berlios[DOT]de<br>or <a href="http://developer.berlios.de/sendmessage.php?touser=3712">leave a message</a><br><br><a href="irc://irc.quakenet.org/jollix" target="_blank">irc://irc.quakenet.org/jollix</a><br><br>
+								<a href="http://lists.berlios.de/mailman/listinfo/jollix-user" target="_blank">User Mailingliste</a><br>
+				<a href="http://lists.berlios.de/mailman/listinfo/jollix-developer" target="_blank">Developer</a>
 			</td>
 		</tr>
 	</table>
