--- a/jollix/public_html/en/en_news.html
+++ b/jollix/public_html/en/en_news.html
@@ -43,7 +43,21 @@
 	<table>
 		<tr>
 			<td valign="top"><font size="+1"><b>News:<b></font><br><br>
-				<b><i>22.10.03</i></b> - <b>Jollix 0.2 available.</b><br>
+											<b>07.05.2004</b> - <b>Jollix 0.3 Betatest</b><br>
+				Today jollix 0.3 betatest starts!<br><br>
+				New features are::
+				<ul>
+				<li>Linux Kernel 2.6.5</li>
+				<li>Kudzu hardware detection</li>
+				<li>XOrg-X11 6.7.0</li> 
+                                <li>KDE 3.2.2</li> 
+                                <li>KVIRC 3.0 Final</li> 
+				<li>WLAN and bluetooth support</li>
+				</ul> 
+								<b>26.10.03</b> - <b>Jollix 0.2.1 [Bugfix Release] available.</b><br>
+				<a href="en_download.html">Download here.</a>
+				<br><br>
+				<b>22.10.03</b> - <b>Jollix 0.2 available.</b><br>
 				<a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=1366" target="_blank">Download here.</a><br>
 				Version 0.2 is the second beta-release of jollix. The most important enhancements
 				are: supports ATI Radeon graphics cards, ISDN-cards, Fritz!Card DSL by AVM.
@@ -59,7 +73,7 @@
 				(8500-9800) are supported with full OpenGL 3D acceleration. the size of the ISO-image of
 				the jollix LiveCD is 506MB.
 				<br><br>
-				<b><i>06.08.03</i></b> - <b>Gentoo 1.4 released.</b><br> Today Gentoo Linux 1.4 was released
+				<b>06.08.03</b> - <b>Gentoo 1.4 released.</b><br> Today Gentoo Linux 1.4 was released
 				as a LiveCD. Work on jollix is going to be finished soon.<br>
 				"The Network-Integrated Multimedia Middleware (NMM) provides an architecture that allows
 				to create distributed multimedia application easily: local and remote multimedia devices
@@ -75,11 +89,11 @@
 				via boot parameter "jollix doserverregistry" the PC acts as the central registry for the
 				middleware instead starting up the MMBox. See <a href="http://graphics.cs.uni-sb.de/NMM/Docs/index.html" target="_blank">
 				documentaion of MMBox</a> for details about this application and the serverregistry.<br><br>
-				<b><i>06.05.03</i></b> - <b>Betatesters wanted!</b> In case you are interested in
+				<b>06.05.03</b> - <b>Betatesters wanted!</b> In case you are interested in
 				testing the current beta-release of jollix,
 				<a href="http://jollix.berlios.de/phpBB2/viewtopic.php?t=29">get in contact with ViVa</a>
 				and get an account in our forum if you want.<br><br>
-				<b><i>06.05.03</i></b> - There are two mailing lists:<br>
+				<b>06.05.03</b> - There are two mailing lists:<br>
 				<b>jollix-user</b> is public for the users to discuss user-related stuff.
 				To subscribe,
 				<a href="https://lists.berlios.de/mailman/listinfo/jollix-user">click here</a>.<br>
