*** empty log message ***

--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -74,7 +74,7 @@
 				Oliver Schwinn<br>patteh[AT]berlios[DOT]de<br>or <a href="http://developer.berlios.de/sendmessage.php?touser=3719">leave a message</a><br><br>
 				Jochen Spang<br>knochen[AT]berlios[DOT]de<br>or <a href="http://developer.berlios.de/sendmessage.php?touser=3712">leave a message</a><br><br><a href="irc://irc.quakenet.org/jollix" target="_blank">irc://irc.quakenet.org/jollix</a><br><br>
 				<a href="http://lists.berlios.de/mailman/listinfo/jollix-user" target="_blank">User Mailingliste</a><br>
-				<a href="http://lists.berlios.de/mailman/listinfo/jollix-developer" target="_blank">Developer Mailingliste</a>
+				<a href="http://lists.berlios.de/mailman/listinfo/jollix-developer" target="_blank">Developer</a> Mailingliste</a>
 			</td>
 		</tr>
 	</table>
