*** empty log message ***

--- a/jollix/public_html/en/en_about.html
+++ b/jollix/public_html/en/en_about.html
@@ -65,7 +65,7 @@
 	<a href="../en/en_docu.html#installation">this instructions</a> (german only so far!
 	we will translate to english ASAP).
 
-	<h4>Was is jollix NOT?</h4>
+	<h4>What is jollix NOT?</h4>
 	Jollix has nothing to do with
 	<a href="http://jargon.watson-net.com/jargon.asp?prn=1&w=jolix">jolix</a>,
 	the freeware Port of the BSD Net/2 system to the Intel i386 architecture by
