*** empty log message ***

--- a/jollix/public_html/en/en_home.html
+++ b/jollix/public_html/en/en_home.html
@@ -78,14 +78,18 @@
 	</table>
 	<hr>
 	<table border="0" width="100%" bgcolor="#f2f2f2">
-		<tr><td>Powered by:</td><td>Hosted by:</td><td>Partners:</td><td></td><td></td></tr>
+		<tr><td>Powered by:</td><td>Hosted by:</td><td>Partner:</td><td></td><td></td></tr>
 		<tr>
 			<td width="88" valign="top"><a href="http://www.gentoo.org" target="_blank"><img src="../img/powered-by-gentoo.jpg" border="0"></a></td>
 			<td width="124" valign="top"><a href="http://developer.berlios.de" target="_blank">
 				<img src="http://developer.berlios.de/bslogo.php?group_id=666" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
 			</td>
-			<td width="128" valign="top">
-				<a href="http://graphics.cs.uni-sb.de/NMM" target="_blank"><img src="../img/nmmlogo.jpg" border="1"></a>
+			<td width="130" valign="top">
+				<a href="http://graphics.cs.uni-sb.de/NMM" target="_blank"><img src="../img/nmmlogo.jpg" border="0"></a>
+			</td>
+			<td width="130" valign="top">
+			<a href="http://www.extreme-players.de" target="_blank"><img src="../img/exp_logo_m.jpg"
+				 border="0"></a>
 			</td>
 			<td></td>
 		</tr>
