*** empty log message ***

--- a/jollix/public_html/de/de_news.html
+++ b/jollix/public_html/de/de_news.html
@@ -42,7 +42,7 @@
 	<hr>
 	<table>
 		<tr>
-			<td valign="top"><font size="+1"><b>News:<b></font><br><br>
+			<td valign="top"><font size="+1"><b>News:</b></font><br><br>
 			<b>09.05.2004</b> - <b>Neuer Partner: eXp</b><br><br>
 				<a href="http://www.extreme-players.de" target="_blank"><img src="../img/exp_banner.gif" border="0"></a><br><br>
 				Das jollix Team freut sich sehr, die grosse bekannte deutsche Modseite <a href="http://www.extreme-players.de" target="_blank">extreme-players</a> als neuen Partner gewonnen zu haben!<br>eXp bietet seit '99 News zu Mods und aktuellen Spielen aus allen Genres, betreibt ein eigenes Network und ist Content Partner der Zeitschriften <a href="http://www.pcaction.de" target="_blank">PC Action</a> und <a href="http://www.pcgames.de" target="_blank">PC Games</a>. Darüber hinaus bietet eXp eine eigene Filebase und ist offizieller Mirror von vielen großen Mods.<br>Jollix wird speziell für Spiele und Multimedia Anwendungen entwickelt und hat daher in eXp den idealen Partner in Deutschland gefunden.<br> 
