--- a/jollix/public_html/en/en_news.html
+++ b/jollix/public_html/en/en_news.html
@@ -42,7 +42,7 @@
 	<hr>
 	<table>
 		<tr>
-			<td valign="top"><font size="+1"><b>News:<b></font><br><br>
+			<td valign="top"><font size="+1"><b>News:</b></font><br><br>
 											<b>07.05.2004</b> - <b>Jollix 0.3 Betatest</b><br>
 				Today jollix 0.3 betatest starts!<br><br>
 				New features are::
