--- a/jollix/public_html/de/de_home.html
+++ b/jollix/public_html/de/de_home.html
@@ -52,7 +52,7 @@
 	<table border="0" width="100%">
 		<tr>
 			<td valign="top">
-				<font size="+1"><b>News & Ankündigungen:<b></font><br><br>
+				<font size="+1"><b>News & Ankündigungen:</b></font><br><br>
 				<b>09.05.2004</b> - <b>Neuer Partner: eXp</b><br><br>
 				<a href="http://www.extreme-players.de" target="_blank"><img src="../img/exp_banner.gif" border="0"></a><br><br>
 				Das jollix Team freut sich sehr, die grosse bekannte deutsche Modseite <a href="http://www.extreme-players.de" target="_blank">extreme-players</a> als neuen Partner gewonnen zu haben!<br>eXp bietet seit '99 News zu Mods und aktuellen Spielen aus allen Genres, betreibt ein eigenes Network und ist Content Partner der Zeitschriften <a href="http://www.pcaction.de" target="_blank">PC Action</a> und <a href="http://www.pcgames.de" target="_blank">PC Games</a>. Darüber hinaus bietet eXp eine eigene Filebase und ist offizieller Mirror von vielen großen Mods.<br>Jollix wird speziell für Spiele und Multimedia Anwendungen entwickelt und hat daher in eXp den idealen Partner in Deutschland gefunden.<br> 
@@ -84,19 +84,18 @@
 	</table>
 	<hr>
 	<table border="0" width="100%" bgcolor="#f2f2f2">
-		<tr><td>Powered by:</td><td>Hosted by:</td><td>Partner:</td><td></td><td></td></tr>
+		<tr><td  width="150">Powered by:</td><td width="150">Hosted by:</td><td>Partner:</td></tr>
 		<tr>
-			<td width="90" valign="top"><a href="http://www.gentoo.org" target="_blank"><img src="../img/powered-by-gentoo.jpg" border="0"></a></td>
-			<td width="132" valign="top"><a href="http://developer.berlios.de" target="_blank">
-				<img src="http://developer.berlios.de/bslogo.php?group_id=666" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a>
+			<td valign="top"><a href="http://www.gentoo.org" target="_blank"><img src="../img/powered-by-gentoo.jpg" border="0"></a></td>
+			<td valign="top"><a href="http://developer.berlios.de" target="_blank">
+				<img src="http://developer.berlios.de/bslogo.php?group_id=666" width="124" height="32" border="0" alt="BerliOS Developer Logo"></a><br>
 				<a href="http://www.ibiblio.org/pub/Linux/distributions/" target="_blank">
 				<img src="../img/ibiblio_logo.jpg" width="130" height="41" border="0"></a>
 			</td>
-			<td width="130" valign="top">
+			<td valign="top">
 				<a href="http://graphics.cs.uni-sb.de/NMM" target="_blank"><img src="../img/nmmlogo.jpg" border="0"></a>
-			<td width="130" valign="top">
 				<a href="http://www.extreme-players.de" target="_blank"><img src="../img/exp_logo_m.jpg" border="0"></a>
-			<td></td>
+			
 		</tr>
 	</table>
 </div>
