*** empty log message ***

--- a/jollix/public_html/en/en_news.html
+++ b/jollix/public_html/en/en_news.html
@@ -43,7 +43,9 @@
 	<table>
 		<tr>
 			<td valign="top"><font size="+1"><b>News:</b></font><br><br>
-											<b>07.05.2004</b> - <b>Jollix 0.3 Betatest</b><br>
+			<b>12.05.2004</b> - <b>jollix 0.3 english installation documentation available!</b><br>
+			In the great book <a href="http://jetblackz.nabaza.org" target="_blank">"Simply Linux"</a> by jbz you can find a chapter <a href="http://jetblackz.nabaza.org/Installingjollix.html" target="_blank">"Installing jollix"</a> which will help you to bring jollix on your harddisk!<br><b>Many thanks to the author for his great work!</b>
+			<br><br><b>07.05.2004</b> - <b>Jollix 0.3 Betatest</b><br>
 				Today jollix 0.3 betatest starts!<br><br>
 				New features are::
 				<ul>
