*** empty log message ***

--- a/jollix/public_html/en/en_docu.html
+++ b/jollix/public_html/en/en_docu.html
@@ -45,7 +45,7 @@
 		<td valign="top">
 		        There is currently no english documentation by the jollix team available!<br>
 			We are still looking for somebody who can do the english documentation work!<br>
-			<br><b>A great english installation and configuration manual for jollix can be found <a href="http://jetblackz.nabaza.org/Installingjollix.html" target="_blank">here</a>!<b><br>
+			<br><b>A great english installation and configuration manual for jollix can be found <a href="http://jetblackz.cjb.net" target="_blank">here</a>!<b><br>
 			<b>Many thanks to the author!!!<b>
 			 </td>
 		</tr>
