*** empty log message ***

--- a/jollix/public_html/common/packets03beta.html
+++ b/jollix/public_html/common/packets03beta.html
@@ -7,6 +7,7 @@
 </head>
 
 <body bgcolor="#ffffff">
+<div id="text">
 <p class="dochead">jollix Linux 0.3 Overview</p>
 
 <p class="chaphead"><span class="chapnum">0.</span>Content</p>
@@ -215,6 +216,6 @@
 <tr><td bgcolor="#ffffff"><a href="http://qtparted.sourceforge.net" target="_blank">qtparted</a></td><td bgcolor="#ffffff">0.4.3</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.partimage.org" target="_blank">partimage</a></td><td bgcolor="#ffffff">0.6.2</td></tr>
 </table>
-
+</div>
 </body>
 </html>
