*** empty log message ***

--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -60,20 +60,54 @@
 </td></tr>
 </table>
 
-<p class="chaphead"><span class="chapnum">1.</span><a name="system">Core system teams</a></p>
-<table class="ntable" width="60%" cellspacing="0" cellpadding="5" border="1">
-<tr><td width="30%" class="infohead" bgcolor="#eec625"><p>System</p></td><td bgcolor="#eec625"></td></tr>
-<tr><td bgcolor="#ffffff">glibc</td><td bgcolor="#ffffff">2.3.2</td></tr>
-<tr><td bgcolor="#ffffff">gcc</td><td bgcolor="#ffffff">3.3.2</td></tr>
-<tr><td bgcolor="#ffffff">kernel</td><td bgcolor="#ffffff">gentoo-dev-sources-2.6.5</td></tr>
-<tr><td bgcolor="#ffffff">bash</td><td bgcolor="#ffffff">2.05b</td></tr>
-<tr><td bgcolor="#ffffff">sash</td><td bgcolor="#ffffff">3.6</td></tr>
-<tr><td bgcolor="#ffffff">perl</td><td bgcolor="#ffffff">5.8.2</td></tr>
-<tr><td bgcolor="#ffffff">python</td><td bgcolor="#ffffff">2.3.3</td></tr>
-<tr><td bgcolor="#ffffff">DirectFB</td><td bgcolor="#ffffff">0.9.20</td></tr>
-<tr><td bgcolor="#ffffff">openssl</td><td bgcolor="#ffffff">0.9.7c</td></tr>
-<tr><td bgcolor="#ffffff">glib</td><td bgcolor="#ffffff">2.4.0</td></tr>
+<p class="chaphead"><span class="chapnum">1.</span><a name="system">Core system</a></p>
+<table class="ntable" width="100%" cellspacing="0" cellpadding="5" border="1">
+<tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
+<tr><td bgcolor="#ffffff"><a name="a0">0. Jollix linux kernel configuration</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="a1">1. Hardware detection and boot process</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="a2">2. System baselayout and init process</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="a3">3. LiveCD gcloop technology</td></a><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 </table>
+
+<p class="chaphead"><span class="chapnum">1.</span><a name="hardware">Hardware support</a></p>
+<table class="ntable" width="100%" cellspacing="0" cellpadding="5" border="1">
+<tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
+<tr><td bgcolor="#ffffff"><a name="c0">0. ATI drivers</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="c1">1. NVidia drivers</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="c2">2. Dialup, DSL and ISDN</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="c3">3. WLAN, Bluetooth, IRDA and Lirc</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="c4">4. Network configuration and assistents</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="c5">5. Firewire devices and DigitalVideo (DV)</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="c6">6. USB devices and DigiCams</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="c7">7. TV- and DVB cards</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="c8">8. DVD/CD Recording</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="c9">9. Audio cards and technologies</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="c10">10. Printers and scanners</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+</table>
+
+<p class="chaphead"><span class="chapnum">1.</span><a name="apps">Applications</a></p>
+<table class="ntable" width="100%" cellspacing="0" cellpadding="5" border="1">
+<tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="b0">0. Games, native linux- and winex emulated</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="b1">1. Audio and video applications</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="b2">2. Network and messaging applications</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="b3">3. Network multimedia middleware (NMM)</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="b4">4. User utils</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="b5">5. Look and feel - Usability</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="b6">6. Desktop environements</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+</table>
+
+<p class="chaphead"><span class="chapnum">1.</span><a name="docs">Documentation and organisation</a></p>
+<table class="ntable" width="100%" cellspacing="0" cellpadding="5" border="1">
+<tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
+<tr><td bgcolor="#ffffff"><a name="d0">0. General documentation</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="d1">1. Internationalization</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="d2">2. Webside</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="d3">3. Betatesting  and community organization</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#ffffff"><a name="d4">4. Licence managment</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="d5">5. Installation assistent and documentation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+</table>
+
 
 </div>
 </body>
