*** empty log message ***

--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -53,7 +53,7 @@
 <li><a href="#d0">0. General documentation</a></li>
 <li><a href="#d1">1. Internationalization</a></li>
 <li><a href="#d2">2. Webside</a></li>
-<li><a href="#d3">3. Betatesting  and community organization</a></li>
+<li><a href="#d3">3. Betatesting  and community organisation</a></li>
 <li><a href="#d4">4. Licence managment</a></li>
 <li><a href="#d5">5. Installation assistent and documentation</a></li>
 </ul>
@@ -103,7 +103,7 @@
 <tr><td bgcolor="#ffffff"><a name="d0">0. General documentation</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="d1">1. Internationalization</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="d2">2. Webside</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
-<tr><td bgcolor="#f2f2f2"><a name="d3">3. Betatesting  and community organization</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
+<tr><td bgcolor="#f2f2f2"><a name="d3">3. Betatesting  and community organisation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 <tr><td bgcolor="#ffffff"><a name="d4">4. Licence managment</a></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td><td bgcolor="#ffffff"></td></tr>
 <tr><td bgcolor="#f2f2f2"><a name="d5">5. Installation assistent and documentation</a></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td><td bgcolor="#f2f2f2"></td></tr>
 </table>
