*** empty log message ***

--- a/jollix/public_html/common/projectpage.html
+++ b/jollix/public_html/common/projectpage.html
@@ -10,9 +10,10 @@
 <div id="text">
 <p class="dochead">jollix project area and development teams</p>
 
-<p class="chaphead">Introduction</p>
-<p><b>Current version:</b> 0.3 beta2<br><b>Project administration:</b> knochen and patteh
+<p class="chaphead"><span class="chapnum">0.</span>Introduction</p>
+<p><b>Current version:</b> 0.3 beta2<br><b>Project administration:</b> <a href="http://developer.berlios.de/sendmessage.php?touser=3712">knochen</a> and <a href="http://developer.berlios.de/sendmessage.php?touser=3719">patteh</a>
 <br><b>Lead developers:</b>
+<br><b>Team members:</b>
 <br><b>Mailing lists:</b>
 <a href="http://lists.berlios.de/mailman/listinfo/jollix-developer" target="_blank">Developer Mailinglist</a>/<a href="http://lists.berlios.de/mailman/listinfo/jollix-user" target="_blank">User Mailinglist</a></p>
 <table cellspacing="10" cellpadding="0" border="0">
@@ -25,7 +26,15 @@ Jollix linux ist ein Community Projekt, das von Freiwilligen f&uuml;r Spiele- un
 </td></tr>
 </table>
 
-<p class="chaphead"><span class="chapnum">0.</span>Teams overview</p>
+<br><br><hr>
+
+<p class="chaphead"><span class="chapnum">1.</span>Project admin news</p>
+<p><b>17.05.2004</b> - <b>"jollix project area and development teams" - page goes online</b><br>
+We are looking for dedicated developers to build up a jollix development team.</p> 
+
+<br><br><hr><br><br>
+
+<p class="chaphead"><span class="chapnum">2.</span>Teams overview</p>
 <table cellspacing="0" cellpadding="0" border="0">
 <tr><td valign="top">
 <p>Core system</p>
@@ -75,7 +84,9 @@ Jollix linux ist ein Community Projekt, das von Freiwilligen f&uuml;r Spiele- un
 </td></tr>
 </table>
 
-<p class="chaphead"><span class="chapnum">1.</span><a name="system">Core system</a></p>
+<br><br><hr><br><br>
+
+<p class="chaphead"><span class="chapnum">3.</span><a name="system">Core system</a></p>
 <table class="ntable" width="100%" cellspacing="0" cellpadding="10" border="0">
 <tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
@@ -86,7 +97,7 @@ Jollix linux ist ein Community Projekt, das von Freiwilligen f&uuml;r Spiele- un
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 </table>
 
-<p class="chaphead"><span class="chapnum">1.</span><a name="hardware">Hardware support</a></p>
+<p class="chaphead"><span class="chapnum">4.</span><a name="hardware">Hardware support</a></p>
 <table class="ntable" width="100%" cellspacing="0" cellpadding="10" border="0">
 <tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
@@ -104,7 +115,7 @@ Jollix linux ist ein Community Projekt, das von Freiwilligen f&uuml;r Spiele- un
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 </table>
 
-<p class="chaphead"><span class="chapnum">1.</span><a name="apps">Applications</a></p>
+<p class="chaphead"><span class="chapnum">5.</span><a name="apps">Applications</a></p>
 <table class="ntable" width="100%" cellspacing="0" cellpadding="10" border="0">
 <tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
@@ -118,7 +129,7 @@ Jollix linux ist ein Community Projekt, das von Freiwilligen f&uuml;r Spiele- un
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
 </table>
 
-<p class="chaphead"><span class="chapnum">1.</span><a name="docs">Documentation and organisation</a></p>
+<p class="chaphead"><span class="chapnum">6.</span><a name="docs">Documentation and organisation</a></p>
 <table class="ntable" width="100%" cellspacing="0" cellpadding="10" border="0">
 <tr><td width="20%" class="infohead" bgcolor="#eec625">Team<td class="infohead" bgcolor="#eec625">News and development status</td><td width="15%" class="infohead" bgcolor="#eec625">Lead developer</td><td width="15%" class="infohead" bgcolor="#eec625">Team members</td></tr>
 <tr><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td><td bgcolor="#DBDBDB"></td></tr>
